--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ footer .wiki a {
     
     overflow: hidden;
     padding: auto;
+    position:fixed;
     
 }
 
@@ -77,6 +78,7 @@ footer .wiki a {
     font-size: medium;
     margin-top: 25px;
     margin-right: 25px;
+    position: relative;
  }
 
  /* navbar - change style on mouse hover */
@@ -172,8 +174,9 @@ img {
     border-color: rgb(14, 143, 143);
 }
 
-.displayInfo {
+.displayInfo > th{
     text-align: left;
+    border-style: solid;
 }
 
 
