--- a/styles.css
+++ b/styles.css
@@ -174,9 +174,16 @@ img {
     border-color: rgb(14, 143, 143);
 }
 
-.displayInfo > th{
+table {
+    margin-left: auto;
+    margin-right: auto;
     text-align: left;
     border-style: solid;
+}
+
+td, th{
+    border: 2px solid #999;
+    padding:0.5rem;
 }
 
 
